# Awacorn

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  LICENSE  README.md  awacorn.h  generator.h  promise.h
cmake/: AwacornConfig.cmake.in
doc/: async-next.md  async.md  capture.md  event.md  function.md  generator.md  promise.md
example/: coroutine.cpp  hello-world.cpp  then.cpp  timer.cpp
include/: async.hpp  event.hpp  generator  generator.hpp  promise  promise.hpp  variant.hpp
include/awacorn/: async.hpp  event  event.hpp  generator  generator.hpp  promise  promise.hpp
include/awacorn/bits/: function.hpp
include/awacorn/detail/: any.hpp  capture.hpp  function.hpp  unsafe_any.hpp  variant.hpp
include/detail/: capture.hpp  context.hpp  function.hpp  unsafe_any.hpp  variant.hpp
include/experimental/: async.hpp
test/: CMakeLists.txt  test-coroutine.cpp
test/example/: hello-world.cpp  then.cpp  timer.cpp
test/performance/: test-async.cpp  test-promise.cpp
