cmake_minimum_required(VERSION 3.10)
project(
  Awacorn
  VERSION 3.1.0
  LANGUAGES CXX)
add_library(Awacorn INTERFACE)
set(CMAKE_CXX_STANDARD 11)
target_compile_features(Awacorn INTERFACE cxx_std_11)
target_include_directories(Awacorn INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
option(AWACORN_BUILD_EXAMPLE "Also build examples." ON)
option(AWACORN_USE_BOOST "Use boost as generator.")
option(AWACORN_USE_UCONTEXT "Use ucontext as generator.")
if(NOT AWACORN_USE_BOOST AND NOT AWACORN_USE_UCONTEXT)
  if(Boost_FOUND)
    set(AWACORN_USE_BOOST ON)
  else()
    if(NOT Boost_FOUND)
      find_package(Boost REQUIRED COMPONENTS context)
    endif()
    if(Boost_FOUND)
      set(AWACORN_USE_BOOST ON)
    else()
      set(AWACORN_USE_UCONTEXT ON)
    endif()
  endif()
endif()
if(AWACORN_USE_BOOST)
  if(NOT Boost_FOUND)
    find_package(Boost REQUIRED COMPONENTS context)
  endif()
  if(NOT Boost_FOUND)
    message(FATAL_ERROR "boost not found, failed")
  endif()
  include_directories(${Boost_INCLUDE_DIRS})
  link_directories(${Boost_LIBRARY_DIRS})
  message("Using boost as generator.")
  add_definitions(-DAWACORN_USE_BOOST)
elseif(AWACORN_USE_UCONTEXT)
  message("Using ucontext as generator.")
  add_definitions(-DAWACORN_USE_UCONTEXT)
else()
  message(FATAL_ERROR "did not specify a library, failed")
endif()
if(AWACORN_BUILD_EXAMPLE)
  add_compile_options(-Wall -Wextra -g -O2)
  add_executable(timer include example/timer.cpp)
  add_executable(coroutine include example/coroutine.cpp)
  add_executable(then include example/then.cpp)
  if(AWACORN_USE_BOOST)
    target_link_libraries(timer PRIVATE Awacorn boost_context)
    target_link_libraries(coroutine PRIVATE Awacorn boost_context)
    target_link_libraries(then PRIVATE Awacorn boost_context)
  else()
    target_link_libraries(timer PRIVATE Awacorn)
    target_link_libraries(coroutine PRIVATE Awacorn)
    target_link_libraries(then PRIVATE Awacorn)
  endif()
endif()
